[package]
name = "yggit"
version = "0.0.1"
edition = "2021"
description = "small tool to manage my one branch git workflow"
license = "MIT AND Apache-2.0"
documentation = "https://github.com/Pilou97/yggit"
homepage = "https://github.com/Pilou97/yggit"
repository = "https://github.com/Pilou97/yggit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
git2 = "0.17.2"
auth-git2 = "0.5.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
rust_fzf = "0.1.1"
pest = "2.7.3"
pest_derive = "2.7.3"
