[workspace]
members = [
    "crates/yggit",
    "crates/yggit-config",
    "crates/yggit-core",
    "crates/yggit-db",
    "crates/yggit-git",
    "crates/yggit-parser",
    "crates/yggit-ui",
]
resolver = "3"

[workspace.dependencies]
git2 = "0.20.2"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
auth-git2 = "0.5.8"
clap = "4.5.40"
tempfile = "3.20.0"

[workspace.lints.clippy]
disallowed-names = "deny"
assigning_clones = "deny"
bool_assert_comparison = "deny"
bool_comparison = "deny"
bool_to_int_with_if = "deny"
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
