[package]
name = "yggit-core"
version = "1.0.0"
edition = "2021"
description = "yygit logic"
license = "MIT AND Apache-2.0"
documentation = "https://github.com/Pilou97/yggit"
homepage = "https://github.com/Pilou97/yggit"
repository = "https://github.com/Pilou97/yggit"
readme = "https://github.com/Pilou97/yggit"
keywords = ["cli", "workflow", "git"]
categories = ["cli"]

[dependencies]
git2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
yggit-db = { path = "../yggit-db" }
yggit-ui = { path = "../yggit-ui" }
yggit-parser = { path = "../yggit-parser" }
yggit-git = { path = "../yggit-git" }
thiserror = { workspace = true }

[lints]
workspace = true
