[package]
name = "yggit-db"
version = "1.0.0"
edition = "2021"
description = "abstraction over git notes"
license = "MIT AND Apache-2.0"
documentation = "https://github.com/Pilou97/yggit"
homepage = "https://github.com/Pilou97/yggit"
repository = "https://github.com/Pilou97/yggit"
readme = "https://github.com/Pilou97/yggit"
keywords = ["cli", "workflow", "git"]
categories = ["cli"]

[dependencies]
git2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
yggit-test = { path = "../yggit-test" }

[lints]
workspace = true
