[package]
name = "yggit-ui"
version = "1.0.0"
edition = "2021"
description = "yggit interface"
license = "MIT AND Apache-2.0"
documentation = "https://github.com/Pilou97/yggit"
homepage = "https://github.com/Pilou97/yggit"
repository = "https://github.com/Pilou97/yggit"
readme = "https://github.com/Pilou97/yggit"
keywords = ["cli", "workflow", "git"]
categories = ["cli"]

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
