[package]
name = "yggit"
version = "1.0.0"
edition = "2021"
description = "small tool to manage my one branch git workflow"
license = "MIT AND Apache-2.0"
documentation = "https://github.com/Pilou97/yggit"
homepage = "https://github.com/Pilou97/yggit"
repository = "https://github.com/Pilou97/yggit"

[dependencies]
yggit-db = { path = "../yggit-db" }
yggit-git = { path = "../yggit-git" }
yggit-ui = { path = "../yggit-ui" }
yggit-core = { path = "../yggit-core" }
clap = { workspace = true, features = ["derive"] }
git2 = { workspace = true }
